--- a/ref-test/src/index.css
+++ b/ref-test/src/index.css
@@ -13,7 +13,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* a {
+a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -64,61 +64,5 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
-  }
-} */
-
-
-.upload-input {
-  display: inline-block;
-}
-.upload-file-input {
-  display: none;
-}
-
-.upload-list {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-.upload-list-item {
-  margin-top: 5px;
-
-  font-size: 14px;
-  line-height: 2em;
-  font-weight: bold;
-
-  box-sizing: border-box;
-  min-width: 200px;
-
-  position: relative;
-
-  &-success {
-      color: blue;
-  }
-  
-  &-error {
-      color: red;
-  }
-
-  .file-name {
-      .anticon {
-          margin-right: 10px;
-      }
-  }
-
-  .file-actions {
-      display: none;
-
-      position: absolute;
-      right: 7px;
-      top: 0;
-
-      cursor: pointer;
-  }
-
-  &:hover {
-      .file-actions {
-          display: block;
-      }
   }
 }
